Adding Trust structure for Lincheck